--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,43 +1,23 @@
-apiVersion: 1.0.0
+schemaVersion: 2.2.0
 metadata:
-  generateName: kubernetes-image-puller-operator-
-
-attributes:
-  persistVolumes: 'true'
+  generateName: kubernetes-image-puller-operator
 components:
-  - id: golang/go/latest
-    memoryLimit: 512Mi
-    preferences:
-      go.lintTool: golangci-lint
-      go.lintFlags: '--fast'
-    type: chePlugin
-    alias: go-plugin
-  - mountSources: true
-    endpoints:
-      - name: 8080/tcp
-        port: 8080
-    memoryLimit: 2Gi
-    type: dockerimage
-    alias: go-cli
-    image: 'quay.io/eclipse/che-golang-1.12:next'
-    env:
-      - value: '/go:$(CHE_PROJECTS_ROOT)'
-        name: GOPATH
-      - value: /tmp/.cache
-        name: GOCACHE
+  - container:
+      image: quay.io/devfile/universal-developer-image:ubi8-latest
+      memoryLimit: 12Gi
+      mountSources: true
+      volumeMounts:
+        - name: m2
+          path: /home/user/.m2
+    name: tools
 commands:
-  - name: build kubernetes-image-puller-operator
-    actions:
-      - workdir: >-
-          ${CHE_PROJECTS_ROOT}/kubernetes-image-puller-operator
-        type: exec
-        command: go build -v -o ./bin/kubernetes-image-puller ./cmd/manager/main.go
-        component: go-cli
-  - name: test kubernetes-image-puller-operator
-    actions:
-      - workdir: >-
-          ${CHE_PROJECTS_ROOT}/kubernetes-image-puller-operator
-        type: exec
-        command: go test -v ./pkg...
-        component: go-cli
-
+  - id: build and push operator image
+    exec:
+      label: "1. Build"
+      component: tools
+      workingDir: ${PROJECT_SOURCE}
+      commandLine: |
+        make docker-build docker push
+      group:
+        kind: build
+        isDefault: true
