--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -25,5 +25,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: quay.io/eclipse/kubernetes-image-puller-operator:next
-  newName: quay.io/eclipse/kubernetes-image-puller-operator
-  newTag: 1.0.4
+  newName: quay.io/dkwon17/kubernetes-image-puller-operator
+  newTag: validation
