--- a/config/openshift/patches/cainjection_in_kubernetesimagepullers.yaml
+++ b/config/openshift/patches/cainjection_in_kubernetesimagepullers.yaml
@@ -9,18 +9,9 @@
 # Contributors:
 #   Red Hat, Inc. - initial API and implementation
 #
-
-# The following patch enables a conversion webhook for the CRD
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    service.beta.openshift.io/inject-cabundle: "true"
   name: kubernetesimagepullers.che.eclipse.org
-spec:
-  conversion:
-    strategy: Webhook
-    webhook:
-      clientConfig:
-        service:
-          namespace: system
-          name: kubernetes-image-puller-operator-service
-          path: /convert
