--- a/config/webhook/service.yaml
+++ b/config/webhook/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: webhook-service
+  name: kubernetes-image-puller-operator-service
   namespace: system
 spec:
   ports:
