make deploy works, but secret not mounted
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/config/openshift/patches/cainjection_in_webhook.yaml
+++ b/config/openshift/patches/cainjection_in_webhook.yaml
@@ -12,6 +12,6 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: che.eclipse.org
+  name: validating-webhook-configuration
   annotations:
     service.beta.openshift.io/inject-cabundle: "true"
