--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -4,7 +4,7 @@ apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   creationTimestamp: null
-  name: che.eclipse.org
+  name: validating-webhook-configuration
 webhooks:
 - admissionReviewVersions:
   - v1
