--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -11,7 +11,7 @@ webhooks:
   - v1beta1
   clientConfig:
     service:
-      name: webhook-service
+      name: kubernetes-image-puller-operator-service
       namespace: system
       path: /validate-che-eclipse-org-v1alpha1-kubernetesimagepuller
   failurePolicy: Fail
