Generating kubernetes templates, works
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/config/certmanager/certificate.yaml
+++ b/config/certmanager/certificate.yaml
@@ -4,16 +4,16 @@
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
-  name: selfsigned-issuer
-  namespace: system
+  name: kubernetes-image-puller-operator-selfsigned-issuer
+  namespace: kubernetes-image-puller-operator
 spec:
   selfSigned: {}
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: serving-cert  # this name should match the one appeared in kustomizeconfig.yaml
-  namespace: system
+  name: kubernetes-image-puller-operator-serving-cert  # this name should match the one appeared in kustomizeconfig.yaml
+  namespace: kubernetes-image-puller-operator
 spec:
   # $(SERVICE_NAME) and $(SERVICE_NAMESPACE) will be substituted by kustomize
   dnsNames:
@@ -21,5 +21,5 @@ spec:
   - $(SERVICE_NAME).$(SERVICE_NAMESPACE).svc.cluster.local
   issuerRef:
     kind: Issuer
-    name: selfsigned-issuer
+    name: kubernetes-image-puller-operator-selfsigned-issuer
   secretName: kubernetes-image-puller-operator-service-cert # this secret will not be prefixed, since it's not managed by kustomize
