--- a/bundle/manifests/kubernetes-imagepuller-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/kubernetes-imagepuller-operator.clusterserviceversion.yaml
@@ -144,17 +144,6 @@ spec:
               spec:
                 containers:
                   - args:
-                      - --secure-listen-address=0.0.0.0:8443
-                      - --upstream=http://127.0.0.1:8080/
-                      - --logtostderr=true
-                      - --v=10
-                    image: quay.io/brancz/kube-rbac-proxy:v0.11.0
-                    name: kube-rbac-proxy
-                    ports:
-                      - containerPort: 8443
-                        name: https
-                    resources: {}
-                  - args:
                       - --health-probe-bind-address=:8081
                       - --metrics-bind-address=127.0.0.1:8080
                       - --leader-elect
@@ -180,6 +169,10 @@ spec:
                       initialDelaySeconds: 15
                       periodSeconds: 20
                     name: kubernetes-image-puller-operator
+                    ports:
+                      - containerPort: 9443
+                        name: webhook-server
+                        protocol: TCP
                     readinessProbe:
                       httpGet:
                         path: /readyz
@@ -193,8 +186,28 @@ spec:
                       requests:
                         cpu: 100m
                         memory: 64Mi
+                    volumeMounts:
+                      - mountPath: /tmp/k8s-webhook-server/serving-certs
+                        name: cert
+                        readOnly: true
+                  - args:
+                      - --secure-listen-address=0.0.0.0:8443
+                      - --upstream=http://127.0.0.1:8080/
+                      - --logtostderr=true
+                      - --v=10
+                    image: quay.io/brancz/kube-rbac-proxy:v0.11.0
+                    name: kube-rbac-proxy
+                    ports:
+                      - containerPort: 8443
+                        name: https
+                    resources: {}
                 serviceAccountName: kubernetes-image-puller-operator
                 terminationGracePeriodSeconds: 10
+                volumes:
+                  - name: cert
+                    secret:
+                      defaultMode: 420
+                      secretName: webhook-server-cert
       permissions:
         - rules:
             - apiGroups:
@@ -337,4 +350,24 @@ spec:
     matchLabels:
       app: kubernetes-image-puller-operator
   version: 1.0.6
-  replaces: kubernetes-imagepuller-operator.v1.0.5
+  webhookdefinitions:
+    - admissionReviewVersions:
+        - v1
+        - v1beta1
+      containerPort: 443
+      deploymentName: kubernetes-image-puller-operator
+      failurePolicy: Fail
+      generateName: vkubernetesimagepuller.kb.io
+      rules:
+        - apiGroups:
+            - che.eclipse.org
+          apiVersions:
+            - v1alpha1
+          operations:
+            - CREATE
+          resources:
+            - kubernetesimagepullers
+      sideEffects: None
+      targetPort: 9443
+      type: ValidatingAdmissionWebhook
+      webhookPath: /validate-che-eclipse-org-v1alpha1-kubernetesimagepuller
