Use name-prefix to prefix resources, move operator sa from rbac directory to manager directory
Signed-off-by: David Kwon <dakwon@redhat.com>

--- a/config/openshift/patches/service_cert_patch.yaml
+++ b/config/openshift/patches/service_cert_patch.yaml
@@ -12,7 +12,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubernetes-image-puller-operator-service
-  namespace: system
+  name: service
+  namespace: kubernetes-image-puller-operator
   annotations:
     service.beta.openshift.io/serving-cert-secret-name: kubernetes-image-puller-operator-service-cert
