--- a/config/certmanager/certificate.yaml
+++ b/config/certmanager/certificate.yaml
@@ -4,7 +4,7 @@
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
-  name: kubernetes-image-puller-operator-selfsigned-issuer
+  name: selfsigned-issuer
   namespace: kubernetes-image-puller-operator
 spec:
   selfSigned: {}
@@ -12,7 +12,7 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: kubernetes-image-puller-operator-serving-cert  # this name should match the one appeared in kustomizeconfig.yaml
+  name: serving-cert  # this name should match the one appeared in kustomizeconfig.yaml
   namespace: kubernetes-image-puller-operator
 spec:
   # $(SERVICE_NAME) and $(SERVICE_NAMESPACE) will be substituted by kustomize
@@ -21,5 +21,5 @@ spec:
   - $(SERVICE_NAME).$(SERVICE_NAMESPACE).svc.cluster.local
   issuerRef:
     kind: Issuer
-    name: kubernetes-image-puller-operator-selfsigned-issuer
+    name: selfsigned-issuer
   secretName: kubernetes-image-puller-operator-service-cert # this secret will not be prefixed, since it's not managed by kustomize
