--- a/config/crd/patches/webhook_in_kubernetesimagepullers.yaml
+++ b/config/crd/patches/webhook_in_kubernetesimagepullers.yaml
@@ -22,5 +22,5 @@ spec:
       clientConfig:
         service:
           namespace: system
-          name: kubernetes-image-puller-operator-service
+          name: service
           path: /convert
