--- a/config/kubernetes/kustomization.yaml
+++ b/config/kubernetes/kustomization.yaml
@@ -10,6 +10,8 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
+namePrefix: k8s-image-puller-operator-
+
 resources:
   - ../default
   - ../certmanager
@@ -17,7 +19,6 @@ resources:
 patchesStrategicMerge:
   - patches/cainjection_in_kubernetesimagepullers.yaml
   - patches/cainjection_in_webhook.yaml
-  # - patches/service_cert_patch.yaml TODO: Check if this is needed for kubernetes only. This was for adding the cert volume for the service pod I think.
 
 vars:
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER' prefix.
@@ -26,7 +27,7 @@ vars:
     kind: Certificate
     group: cert-manager.io
     version: v1
-    name: kubernetes-image-puller-operator-serving-cert # this name should match the one in certificate.yaml
+    name: k8s-image-puller-operator-serving-cert # this name should match the one in certificate.yaml
   fieldref:
     fieldpath: metadata.namespace
 - name: CERTIFICATE_NAME
@@ -34,16 +35,16 @@ vars:
     kind: Certificate
     group: cert-manager.io
     version: v1
-    name: kubernetes-image-puller-operator-serving-cert # this name should match the one in certificate.yaml
+    name: k8s-image-puller-operator-serving-cert # this name should match the one in certificate.yaml
 - name: SERVICE_NAMESPACE # namespace of the service
   objref:
     kind: Service
     version: v1
-    name: kubernetes-image-puller-operator-service
+    name: k8s-image-puller-operator-service
   fieldref:
     fieldpath: metadata.namespace
 - name: SERVICE_NAME
   objref:
     kind: Service
     version: v1
-    name: kubernetes-image-puller-operator-service
+    name: k8s-image-puller-operator-service
