--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -11,6 +11,7 @@
 #
 
 resources:
+- service_account.yaml
 - manager.yaml
 - controller-namespace.yaml
 
@@ -25,5 +26,16 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: quay.io/eclipse/kubernetes-image-puller-operator:next
-  newName: quay.io/eclipse/kubernetes-image-puller-operator
-  newTag: 1.0.6
+  newName: quay.io/dkwon17/kubernetes-image-puller-operator
+  newTag: validation
+
+vars:
+- fieldref: {}
+  name: CONTROLLER_SERVICE_ACCOUNT
+  objref:
+    kind: ServiceAccount
+    name: sa
+    version: v1
+
+configurations:
+- kustomizeconfig.yaml
