--- a/config/rbac/auth_proxy_role_binding.yaml
+++ b/config/rbac/auth_proxy_role_binding.yaml
@@ -20,4 +20,6 @@ roleRef:
   name: proxy-role
 subjects:
 - kind: ServiceAccount
-  name: kubernetes-image-puller-operator
+  name: $(CONTROLLER_SERVICE_ACCOUNT)
+  namespace: kubernetes-image-puller-operator
+  
